@@ -8,7 +8,6 @@ import java.util.*;
 import java.util.concurrent.*;
 import javax.net.ssl.*;
 import com.sun.net.httpserver.*;
-import com.sun.net.httpserver.SimpleFileServer.*;
 import com.tugalsan.api.log.server.TS_Log;
 import com.tugalsan.api.unsafe.client.TGS_UnSafe;
 
@@ -16,53 +15,6 @@ public class TS_SHttpServer {
 
     final private static TS_Log d = TS_Log.of(TS_SHttpServer.class);
 
-    @Deprecated //HTTP not safe
-    public static void startHttpFileServer(String ip, int port, Path root) {
-        try {
-            var server = SimpleFileServer.createFileServer(
-                    new InetSocketAddress(ip, port),
-                    root, OutputLevel.INFO
-            );
-            server.start();
-        } catch (Exception e) {
-            d.ce("startHttpFileServer", e);
-        }
-    }
-
-    @Deprecated //HTTP not safe
-    public static void startHttpServlet(String ip, int port, TS_SHttpHandlerAbstract... handlers) {
-        try {
-            var server = HttpServer.create(new InetSocketAddress(ip, port), 2);
-            Arrays.stream(handlers).forEach(handler -> server.createContext(handler.slash_path, handler));
-            server.setExecutor(Executors.newCachedThreadPool(Thread.ofVirtual().factory()));
-            server.start();
-        } catch (Exception e) {
-            d.ce("startHttpServlet", e);
-        }
-    }
-
-    //cd C:\me\codes\com.tugalsan\res\com.tugalsan.res.file
-    //java --enable-preview --add-modules jdk.incubator.vector -jar target/com.tugalsan.res.file-1.0-SNAPSHOT-jar-with-dependencies.jar
-//HOWTO
-//    public static void main(String[] args) {
-//        var ip = "127.0.0.1";
-//        var root = Path.of("D:", "xampp_data", "DAT", "PUB", "RES");
-//        var p12 = Path.of("D:", "xampp_data", "SSL", "tomcat.p12");
-//        var pass = "MyPass";
-//        var port = 8081;
-//        startHttpFileServer(ip, port, root);
-//        startHttpsServlet(ip, port,
-//                p12, pass,
-//                HandlerStr.of("/hello1", handle -> "hello1"),
-//                HandlerStr.of("/hello2", handle -> "hello2")
-//        );
-//        startHttpServlet(ip, port,
-//                HandlerStr.of("/hello1", handle -> "hello1"),
-//                HandlerStr.of("/hello2", handle -> "hello2")
-//        );
-//        System.out.println("p12:" + p12);
-//        System.out.println("port:" + port);
-//    }
     // The keystore is generated using the following three files:
     //    - private_key.key
     //    - site.crt
@@ -75,7 +27,7 @@ public class TS_SHttpServer {
         return TGS_UnSafe.call(() -> {
             //load keystore
             var ks = KeyStore.getInstance("PKCS12");
-            try ( var fis = new FileInputStream(p12.toAbsolutePath().toString())) {
+            try (var fis = new FileInputStream(p12.toAbsolutePath().toString())) {
                 ks.load(fis, pass.toCharArray());
             }
 
@@ -97,7 +49,9 @@ public class TS_SHttpServer {
 
     private static HttpsServer createServer(String ip, int port, SSLContext sslContext) {
         return TGS_UnSafe.call(() -> {
-            var server = HttpsServer.create(new InetSocketAddress(ip, port), 2);
+            var server = ip == null
+                    ? HttpsServer.create(new InetSocketAddress(port), 2)//InetAddress.getLoopbackAddress()
+                    : HttpsServer.create(new InetSocketAddress(ip, port), 2);
             server.setHttpsConfigurator(new HttpsConfigurator(sslContext) {
                 @Override
                 public void configure(HttpsParameters params) {
@@ -129,7 +83,11 @@ public class TS_SHttpServer {
         server.start();
     }
 
-    public static boolean startHttpsServlet(String ip, int port, Path p12, String pass, TS_SHttpHandlerAbstract... handlers) {
+    public static boolean startHttpsServlet(int port, Path p12, String pass, Path fileHandlerRoot, TS_SHttpHandlerAbstract... handlers) {
+        return startHttpsServlet(null, port, p12, pass, fileHandlerRoot, handlers);
+    }
+
+    public static boolean startHttpsServlet(String ip, int port, Path p12, String pass, Path fileHandlerRoot, TS_SHttpHandlerAbstract... handlers) {
         return TGS_UnSafe.call(() -> {
             var sslContext = createSSLContext(p12, pass); //create ssl server
             if (sslContext == null) {
@@ -138,6 +96,9 @@ public class TS_SHttpServer {
             var server = createServer(ip, port, sslContext);
             if (server == null) {
                 return false;
+            }
+            if (fileHandlerRoot != null) {
+                server.createContext("/file", SimpleFileServer.createFileHandler(fileHandlerRoot));
             }
             addHanders(server, handlers);
             start(server);
